# pyvlasiator

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflow/: ci-cd.yml
.github/workflows/: CI.yml  ci-cd.yml
_modules/: index.html
_modules/pyvlasiator/plot/: plot.html
_modules/pyvlasiator/vlsv/: reader.html  variables.html
_sources/: example.ipynb.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/pyvlasiator/: index.rst.txt
_sources/autoapi/pyvlasiator/plot/: index.rst.txt
_sources/autoapi/pyvlasiator/plot/plot/: index.rst.txt
_sources/autoapi/pyvlasiator/pyvlasiator/: index.rst.txt
_sources/autoapi/pyvlasiator/vlsv/: index.rst.txt
_sources/autoapi/pyvlasiator/vlsv/reader/: index.rst.txt
_sources/autoapi/pyvlasiator/vlsv/variables/: index.rst.txt
autoapi/: index.html
autoapi/pyvlasiator/: index.html
autoapi/pyvlasiator/plot/: index.html
autoapi/pyvlasiator/plot/plot/: index.html
autoapi/pyvlasiator/pyvlasiator/: index.html
autoapi/pyvlasiator/vlsv/: index.html
autoapi/pyvlasiator/vlsv/reader/: index.html
autoapi/pyvlasiator/vlsv/variables/: index.html
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyvlasiator/: pyvlasiator.py
src/pyvlasiator/plot/: __init__.py  plot.py
src/pyvlasiator/vlsv/: __init__.py  reader.py  variables.py
src/vlasiator/: ci-cd.yml  vlasiator.py
tests/: test_pyvlasiator.py  test_vlasiator.py
