[tool.poetry]
name = "pyvlasiator"
version = "0.1.0"
description = ""
authors = ["Hongyang Zhou <hyzhou@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
