[tool.poetry]
name = "pyvlasiator"
version = "0.1.0"
description = ""
authors = ["Hongyang Zhou <hyzhou@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
matplotlib = {version = "^3.7.2", optional = true}
pytest-benchmark = "^4.0.0"

[tool.poetry.extras]
plot = ["matplotlib"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
requests = "^2.31.0"
jupyter = "^1.0.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
